--- a/templates/main.html
+++ b/templates/main.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'css/product.css' %}">
     <link rel="stylesheet" href="{% static 'css/cart.css' %}">
+<link href="{% static 'css/offcanvas-navbar.css' %}" rel="stylesheet">
+
 
 {% comment %} <link rel="stylesheet" href="{% static 'css/cart.css' %}"> {% endcomment %}
 
